# labtui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  KEY_CONFIG.md  Makefile  NIGHTLIES.md  README.md  THEMES.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: brew.yml  cd.yml  ci.yml  nightly.yml
asyncgit/: Cargo.toml  README.md
asyncgit/src/: lib.rs
asyncgit/src/sync/: commit.rs  hooks.rs  mod.rs  status.rs  utils.rs
asyncgitlab/: Cargo.toml  README.md  ROADMAP.md
asyncgitlab/examples/: list_mrs.rs
asyncgitlab/src/: board.rs  client.rs  config.rs  error.rs  job.rs  lib.rs  remote.rs  runtime.rs  types.rs
filetreelist/: Cargo.toml  README.md
git2-hooks/: Cargo.toml
git2-testing/: Cargo.toml
invalidstring/: Cargo.toml  README.md
scopetime/: Cargo.toml  README.md
src/: app.rs  args.rs  gitui.rs  input.rs  labtui.rs  main.rs  open_browser.rs  options.rs  queue.rs  strings.rs
src/components/: mod.rs  textinput.rs
src/keys/: key_config.rs  key_list.rs
src/popups/: help.rs
src/snapshots/: labtui__gitui__tests__app_loading.snap  labtui__gitui__tests__app_loading_finished.snap  labtui__gitui__tests__app_log_tab_showing_one_commit.snap  labtui__labtui__tests__app_loading.snap  labtui__labtui__tests__app_loading_finished.snap  labtui__labtui__tests__app_log_tab_showing_one_commit.snap
src/tabs/: issues.rs  merge_requests.rs  mod.rs  pipelines.rs
wix/: main.wxs
