[package]
name = "asyncgitlab"
version = "0.1.0"
edition = "2021"
description = "Async GitLab API layer for labtui (gitui fork)"
license = "MIT"
repository = "https://github.com/tomleptl/labtui"
readme = "README.md"
keywords = ["gitlab", "tui", "git", "async", "api"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
# only used for the `AsyncJob` trait so GitLab tasks plug into gitui's
# threadpool exactly like git tasks. default-features=false avoids vendor-openssl.
asyncgit = { path = "../asyncgit", default-features = false }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
# rustls instead of native OpenSSL: avoids the vendor-openssl build breakage,
# pure-Rust TLS for all GitLab API calls.
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# OS credential store for the access token (gnome-keyring / KWallet via the
# Secret Service D-Bus API on Linux). Pure-Rust crypto so it does not link OpenSSL.
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
